--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-pandas
-seaborn
-matplotlib
-apyori
-scikit-learn
-fuzzywuzzy
-streamlit
-python-Levenshtein
+streamlit==1.44.1
+pandas==2.2.3
+numpy==2.2.5
+scikit-learn==1.6.1
+fuzzywuzzy==0.18.0
+python-Levenshtein==0.27.1
+matplotlib==3.10.1
+seaborn==0.13.2
+apyori==1.1.2
+supabase==2.9.4
+python-dotenv==1.0.1
