--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-streamlit==1.44.1
-pandas==2.2.3
-numpy==2.2.5
-scikit-learn==1.6.1
-fuzzywuzzy==0.18.0
-python-Levenshtein==0.27.1
-matplotlib==3.10.1
-seaborn==0.13.2
-apyori==1.1.2
-supabase==2.9.4
-python-dotenv==1.0.1
+streamlit
+pandas
+numpy
+scikit-learn
+fuzzywuzzy
+python-Levenshtein
+matplotlib
+seaborn
+apyori
+supabase
+python-dotenv
